[package]
authors = ["Brian Smith <brian@briansmith.org>"]
build = "build.rs"
categories = ["cryptography", "no-std"]
description = "Safe, fast, small crypto using Rust."
documentation = "https://briansmith.org/rustdoc/ring/"
edition = "2018"
keywords = ["crypto", "cryptography", "rand", "ECC", "RSA"]
license-file = "LICENSE"
name = "ring-ecc"
readme = "doc/link-to-readme.md"
repository = "https://github.com/briansmith/ring"
version = "0.16.9"

# Prevent multiple versions of *ring* from being linked into the same program.
links = "ring-asm"

exclude = [
    # The presence of .gitignore is used to differentiate non-packaged builds
    # from packaged builds in build.rs.
    ".gitignore",
    "pregenerated/tmp",
]
include = [
    "LICENSE",
    "Cargo.toml",

    "pregenerated/*",

    "build.rs",

    "crypto/constant_time_test.c",
    "crypto/cpu-intel.c",
    "crypto/crypto.c",
    "crypto/fipsmodule/bn/asm/armv4-mont.pl",
    "crypto/fipsmodule/bn/asm/armv8-mont.pl",
    "crypto/fipsmodule/bn/asm/x86-mont.pl",
    "crypto/fipsmodule/bn/asm/x86_64-mont.pl",
    "crypto/fipsmodule/bn/asm/x86_64-mont5.pl",
    "crypto/fipsmodule/bn/generic.c",
    "crypto/fipsmodule/bn/internal.h",
    "crypto/fipsmodule/bn/montgomery.c",
    "crypto/fipsmodule/bn/montgomery_inv.c",
    "crypto/fipsmodule/ec/asm/ecp_nistz256-armv4.pl",
    "crypto/fipsmodule/ec/asm/ecp_nistz256-armv8.pl",
    "crypto/fipsmodule/ec/asm/ecp_nistz256-x86.pl",
    "crypto/fipsmodule/ec/asm/p256-x86_64-asm.pl",
    "crypto/fipsmodule/ec/ecp_nistz.c",
    "crypto/fipsmodule/ec/ecp_nistz.h",
    "crypto/fipsmodule/ec/ecp_nistz256.c",
    "crypto/fipsmodule/ec/ecp_nistz256.h",
    "crypto/fipsmodule/ec/ecp_nistz256_table.inl",
    "crypto/fipsmodule/ec/ecp_nistz384.h",
    "crypto/fipsmodule/ec/ecp_nistz384.inl",
    "crypto/fipsmodule/ec/gfp_p256.c",
    "crypto/fipsmodule/ec/gfp_p384.c",
    "crypto/fipsmodule/sha/asm/sha256-armv4.pl",
    "crypto/fipsmodule/sha/asm/sha512-armv4.pl",
    "crypto/fipsmodule/sha/asm/sha512-armv8.pl",
    "crypto/fipsmodule/sha/asm/sha512-x86_64.pl",
    "crypto/internal.h",
    "crypto/limbs/limbs.c",
    "crypto/limbs/limbs.h",
    "crypto/limbs/limbs.inl",
    "crypto/mem.c",
    "crypto/perlasm/arm-xlate.pl",
    "crypto/perlasm/x86asm.pl",
    "crypto/perlasm/x86gas.pl",
    "crypto/perlasm/x86nasm.pl",
    "crypto/perlasm/x86_64-xlate.pl",
    "examples/checkdigest.rs",
    "include/GFp/aes.h",
    "include/GFp/arm_arch.h",
    "include/GFp/base.h",
    "include/GFp/cpu.h",
    "include/GFp/mem.h",
    "include/GFp/type_check.h",
    "src/agreement.rs",
    "src/arithmetic.rs",
    "src/arithmetic/bigint.rs",
    "src/arithmetic/bigint_elem_exp_consttime_tests.txt",
    "src/arithmetic/bigint_elem_exp_vartime_tests.txt",
    "src/arithmetic/bigint_elem_mul_tests.txt",
    "src/arithmetic/bigint_elem_reduced_once_tests.txt",
    "src/arithmetic/bigint_elem_reduced_tests.txt",
    "src/arithmetic/bigint_elem_squared_tests.txt",
    "src/arithmetic/constant.rs",
    "src/arithmetic/montgomery.rs",
    "src/bits.rs",
    "src/c.rs",
    "src/constant_time.rs",
    "src/cpu.rs",
    "src/data/alg-rsa-encryption.der",
    "src/debug.rs",
    "src/digest.rs",
    "src/digest/sha1.rs",
    "src/digest/sha2.rs",
    "src/ec.rs",
    "src/ec/keys.rs",
    "src/ec/suite_b/curve.rs",
    "src/ec/suite_b.rs",
    "src/ec/suite_b/ops/elem.rs",
    "src/ec/suite_b/ops.rs",
    "src/ec/suite_b/ops/p256.rs",
    "src/ec/suite_b/ops/p256_elem_mul_tests.txt",
    "src/ec/suite_b/ops/p256_elem_neg_tests.txt",
    "src/ec/suite_b/ops/p256_elem_sum_tests.txt",
    "src/ec/suite_b/ops/p256_point_double_tests.txt",
    "src/ec/suite_b/ops/p256_point_mul_base_tests.txt",
    "src/ec/suite_b/ops/p256_point_mul_serialized_tests.txt",
    "src/ec/suite_b/ops/p256_point_mul_tests.txt",
    "src/ec/suite_b/ops/p256_point_sum_mixed_tests.txt",
    "src/ec/suite_b/ops/p256_point_sum_tests.txt",
    "src/ec/suite_b/ops/p256_scalar_mul_tests.txt",
    "src/ec/suite_b/ops/p256_scalar_square_tests.txt",
    "src/ec/suite_b/ops/p384.rs",
    "src/ec/suite_b/ops/p384_elem_div_by_2_tests.txt",
    "src/ec/suite_b/ops/p384_elem_mul_tests.txt",
    "src/ec/suite_b/ops/p384_elem_neg_tests.txt",
    "src/ec/suite_b/ops/p384_elem_sum_tests.txt",
    "src/ec/suite_b/ops/p384_point_double_tests.txt",
    "src/ec/suite_b/ops/p384_point_mul_base_tests.txt",
    "src/ec/suite_b/ops/p384_point_mul_tests.txt",
    "src/ec/suite_b/ops/p384_point_sum_tests.txt",
    "src/ec/suite_b/ops/p384_scalar_mul_tests.txt",
    "src/ec/suite_b/private_key.rs",
    "src/ec/suite_b/public_key.rs",
    "src/ec/suite_b/suite_b_public_key_tests.txt",
    "src/endian.rs",
    "src/error.rs",
    "src/io.rs",
    "src/io/der.rs",
    "src/io/der_writer.rs",
    "src/io/positive.rs",
    "src/io/writer.rs",
    "src/lib.rs",
    "src/limb.rs",
    "src/endian.rs",
    "src/pkcs8.rs",
    "src/polyfill.rs",
    "src/polyfill/convert.rs",
    "src/rand.rs",
    "src/signature.rs",
    "src/test.rs",
    "src/test_1_syntax_error_tests.txt",
    "src/test_1_tests.txt",
    "src/test_3_tests.txt",
    "tests/digest_tests.rs",
    "tests/digest_tests.txt",
    "tests/rand_tests.rs",
    "third_party/fiat/curve25519.c",
    "third_party/fiat/curve25519_32.h",
    "third_party/fiat/curve25519_64.h",
    "third_party/fiat/curve25519_tables.h",
    "third_party/fiat/internal.h",
    "third_party/fiat/LICENSE",
    "third_party/fiat/make_curve25519_tables.py",
    "third_party/NIST/SHAVS/SHA1LongMsg.rsp",
    "third_party/NIST/SHAVS/SHA1Monte.rsp",
    "third_party/NIST/SHAVS/SHA1ShortMsg.rsp",
    "third_party/NIST/SHAVS/SHA224LongMsg.rsp",
    "third_party/NIST/SHAVS/SHA224Monte.rsp",
    "third_party/NIST/SHAVS/SHA224ShortMsg.rsp",
    "third_party/NIST/SHAVS/SHA256LongMsg.rsp",
    "third_party/NIST/SHAVS/SHA256Monte.rsp",
    "third_party/NIST/SHAVS/SHA256ShortMsg.rsp",
    "third_party/NIST/SHAVS/SHA384LongMsg.rsp",
    "third_party/NIST/SHAVS/SHA384Monte.rsp",
    "third_party/NIST/SHAVS/SHA384ShortMsg.rsp",
    "third_party/NIST/SHAVS/SHA512LongMsg.rsp",
    "third_party/NIST/SHAVS/SHA512Monte.rsp",
    "third_party/NIST/SHAVS/SHA512ShortMsg.rsp",
]

[lib]
name = "ring_ecc"

[dependencies]
untrusted = { version = "0.7.0" }

[target.'cfg(all(any(target_arch = "aarch64", target_arch = "arm", target_arch = "x86", target_arch = "x86_64"), not(target_os = "ios")))'.dependencies]
spin = { version = "0.5.2", default-features = false }


[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
libc = { version = "0.2.48", default-features = false }

[target.'cfg(any(target_os = "android", target_os = "freebsd", target_os = "linux", target_os = "netbsd", target_os = "openbsd", target_os = "solaris"))'.dependencies]
lazy_static = { version = "1.3", default-features = false, optional = true }

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown", target_env = ""))'.dependencies]
web-sys = { version = "0.3.25", default-features = false, features = ["Crypto", "Window"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.7", default-features = false, features = ["ntsecapi", "wtypesbase"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.2.48", default-features = false }

[target.'cfg(any(unix, windows))'.dev-dependencies]
libc = { version = "0.2.48", default-features = false }

# Keep this in sync with `[dependencies]` in pregenerate_asm/Cargo.toml.
[build-dependencies]
cc = { version = "1.0.37", default-features = false }

[features]
# These features are documented in the top-level module's documentation.
default = ["alloc", "dev_urandom_fallback"]
alloc = []
dev_urandom_fallback = ["lazy_static"]
internal_benches = []
slow_tests = []
std = ["alloc"]
test_logging = []

# XXX: debug = false because of https://github.com/rust-lang/rust/issues/34122

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1